--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ people:
   pic: jn.png
   position: Director
 
-- name: Donna Prescott 
+- name: Donna Newman 
   pic: donna.jpg
   position: Director
   social:
